--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.16",
     "@reduxjs/toolkit": "^1.9.2",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
